manifests-failed/vault-1.4.6.tgz-manifest.yaml
---
# Source: vault/templates/injector/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: my-release-vault-injector
  namespace: "vault-1.4.6.tgz"
  labels:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: vault
    app.kubernetes.io/version: 1.17.0
    helm.sh/chart: vault-1.4.6
    app.kubernetes.io/part-of: vault
    app.kubernetes.io/component: injector
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: my-release
      app.kubernetes.io/name: vault
      app.kubernetes.io/part-of: vault
      app.kubernetes.io/component: injector
  policyTypes:
    - Ingress
    - Egress
  egress:
    - {}
  ingress:
    - ports:
        - port: 8080
---
# Source: vault/templates/server/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: my-release-vault-server
  namespace: "vault-1.4.6.tgz"
  labels:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: vault
    app.kubernetes.io/version: 1.17.0
    helm.sh/chart: vault-1.4.6
    app.kubernetes.io/part-of: vault
    app.kubernetes.io/component: server
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: my-release
      app.kubernetes.io/name: vault
      app.kubernetes.io/part-of: vault
      app.kubernetes.io/component: server
  policyTypes:
    - Ingress
    - Egress
  egress:
    - {}
  ingress:
    - ports:
        - port: 8200
        - port: 8200
        - port: 8200
        - port: 8201
        - port: 8201
        - port: 8201
---
# Source: vault/templates/injector/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-vault-injector
  namespace: "vault-1.4.6.tgz"
  labels:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: vault
    app.kubernetes.io/version: 1.4.1
    helm.sh/chart: vault-1.4.6
    app.kubernetes.io/part-of: vault
    app.kubernetes.io/component: injector
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: https
      port: 443
      protocol: TCP
      nodePort: null
      targetPort: https
  selector:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/name: vault
    app.kubernetes.io/part-of: vault
    app.kubernetes.io/component: injector
---
# Source: vault/templates/server/active-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-vault-server-active
  namespace: "vault-1.4.6.tgz"
  labels:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: vault
    app.kubernetes.io/version: 1.17.0
    helm.sh/chart: vault-1.4.6
    app.kubernetes.io/part-of: vault
    app.kubernetes.io/component: server
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: http
      port: 8200
      protocol: TCP
      nodePort: null
      targetPort: http
    - name: https-internal
      port: 8201
      protocol: TCP
      nodePort: null
      targetPort: https-internal
  selector:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/name: vault
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: vault
    vault-active: "true"
---
# Source: vault/templates/server/service-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-vault-server-headless
  namespace: "vault-1.4.6.tgz"
  labels:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: vault
    app.kubernetes.io/version: 1.17.0
    helm.sh/chart: vault-1.4.6
    app.kubernetes.io/part-of: vault
    app.kubernetes.io/component: server
spec:
  type: ClusterIP
  clusterIP: None
  publishNotReadyAddresses: true
  ports:
    - name: http
      port: 8200
      targetPort: http
    - name: https-internal
      port: 8201
      targetPort: https-internal
  selector:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/name: vault
    app.kubernetes.io/part-of: vault
    app.kubernetes.io/component: server
---
# Source: vault/templates/server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-vault-server
  namespace: "vault-1.4.6.tgz"
  labels:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: vault
    app.kubernetes.io/version: 1.17.0
    helm.sh/chart: vault-1.4.6
    app.kubernetes.io/part-of: vault
    app.kubernetes.io/component: server
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: http
      port: 8200
      protocol: TCP
      nodePort: null
      targetPort: http
    - name: https-internal
      port: 8201
      protocol: TCP
      nodePort: null
      targetPort: https-internal
  selector:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/name: vault
    app.kubernetes.io/part-of: vault
    app.kubernetes.io/component: server
---
# Source: vault/templates/injector/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release-vault-injector
  namespace: "vault-1.4.6.tgz"
  labels:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: vault
    app.kubernetes.io/version: 1.4.1
    helm.sh/chart: vault-1.4.6
    app.kubernetes.io/part-of: vault
    app.kubernetes.io/component: injector
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/instance: my-release
      app.kubernetes.io/name: vault
      app.kubernetes.io/part-of: vault
      app.kubernetes.io/component: injector
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: my-release
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: vault
        app.kubernetes.io/version: 1.4.1
        helm.sh/chart: vault-1.4.6
        app.kubernetes.io/part-of: vault
        app.kubernetes.io/component: injector
    spec:
      serviceAccountName: my-release-vault-injector
      
      automountServiceAccountToken: true
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/instance: my-release
                    app.kubernetes.io/name: vault
                    app.kubernetes.io/component: injector
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: Always
        supplementalGroups: []
        sysctls: []
      containers:
        - name: sidecar-injector
          image: docker.io/bitnami/vault-k8s:1.4.1-debian-12-r6
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 1001
            runAsNonRoot: true
            runAsUser: 1001
            seLinuxOptions: null
            seccompProfile:
              type: RuntimeDefault
          args:
            - agent-inject
            - 2>&1
          resources:
            limits:
              cpu: 150m
              ephemeral-storage: 1024Mi
              memory: 192Mi
            requests:
              cpu: 100m
              ephemeral-storage: 50Mi
              memory: 128Mi
          ports:
            - name: https
              containerPort: 8080
          livenessProbe:
            failureThreshold: 5
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            tcpSocket:
              port: https
          readinessProbe:
            failureThreshold: 5
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            httpGet:
              path: /health/ready
              port: https
              scheme: HTTPS
          volumeMounts:
      volumes:
---
# Source: vault/templates/server/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: my-release-vault-server
  namespace: "vault-1.4.6.tgz"
  labels:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: vault
    app.kubernetes.io/version: 1.17.0
    helm.sh/chart: vault-1.4.6
    app.kubernetes.io/part-of: vault
    app.kubernetes.io/component: server
spec:
  replicas: 1
  serviceName: my-release-vault-server-headless
  podManagementPolicy: Parallel
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/instance: my-release
      app.kubernetes.io/name: vault
      app.kubernetes.io/part-of: vault
      app.kubernetes.io/component: server
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: my-release
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: vault
        app.kubernetes.io/version: 1.17.0
        helm.sh/chart: vault-1.4.6
        app.kubernetes.io/part-of: vault
        app.kubernetes.io/component: server
    spec:
      serviceAccountName: my-release-vault-server
      
      automountServiceAccountToken: true
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/instance: my-release
                    app.kubernetes.io/name: vault
                    app.kubernetes.io/component: server
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: Always
        supplementalGroups: []
        sysctls: []
      containers:
        - name: server
          image: docker.io/bitnami/vault:1.17.0-debian-12-r0
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 1001
            runAsNonRoot: true
            runAsUser: 1001
            seLinuxOptions: null
            seccompProfile:
              type: RuntimeDefault
          args:
            - server
            - -config=/bitnami/vault/config/config.hcl
          resources:
            limits:
              cpu: 150m
              ephemeral-storage: 1024Mi
              memory: 192Mi
            requests:
              cpu: 100m
              ephemeral-storage: 50Mi
              memory: 128Mi
          ports:
            - name: http
              containerPort: 8200
            - name: https-internal
              containerPort: 8201
          readinessProbe:
            failureThreshold: 5
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            exec:
              command:
                - vault
                - status
                - -tls-skip-verify
          lifecycle:
            # From upstream Vault helm chart:
            # Vault container doesn't receive SIGTERM from Kubernetes
            # and after the grace period ends, Kube sends SIGKILL.  This
            # causes issues with graceful shutdowns such as deregistering itself
            # from Consul (zombie services).
            preStop:
              exec:
                command: [
                  "/bin/sh", "-ec",
                  # Adding a sleep here to give the pod eviction a
                  # chance to propagate, so requests will not be made
                  # to this pod while it's terminating
                  "sleep 5 && kill -SIGTERM $(pidof vault)",
                  ]
          volumeMounts:
            - name: data
              mountPath: /bitnami/vault/data
            - name: config
              mountPath: /bitnami/vault/config
            - name: home
              mountPath: /bitnami/vault/home
      volumes:
        - name: config
          configMap:
            name: my-release-vault-server
        - name: home
          emptyDir: {}
  volumeClaimTemplates:
    - metadata:
        name: data
        annotations:
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: "10Gi"
---
# Source: vault/templates/injector/mutating-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: my-release-vault-vault-1.4.6.tgz-injector
  labels:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: vault
    app.kubernetes.io/version: 1.4.1
    helm.sh/chart: vault-1.4.6
    app.kubernetes.io/part-of: vault
    app.kubernetes.io/component: injector
webhooks:
  - name: vault.hashicorp.com
    failurePolicy: Ignore
    matchPolicy: Exact
    sideEffects: None
    timeoutSeconds: 30
    admissionReviewVersions: ["v1", "v1beta1"]
    clientConfig:
      service:
        name: my-release-vault-injector
        namespace: "vault-1.4.6.tgz"
        path: "/mutate"
      caBundle: ""
    rules:
      - operations: ["CREATE", "UPDATE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
    objectSelector:
      matchExpressions:
        - key: app.kubernetes.io/component
          operator: NotIn
          values:
            - injector
